--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -8,6 +8,18 @@ body > footer {
   margin: 0 auto;
 }
 
+code {
+  display: inline;
+  padding: 0;
+}
+
+pre {
+  font-size: 0.8em;
+  code {
+    display: block;
+  }
+}
+
 // Grid button
 .toggleWrapper {
   @if $edit-mode == true {
