--- a/content/style/_gutenberg-config.scss
+++ b/content/style/_gutenberg-config.scss
@@ -13,7 +13,7 @@ $paragraph-indent: false; // [ true / false ]
 
 // Base sizes
 $base-font-size: 100 !default; // In %. Also used for mobile. Number only, no units.
-$base-font-size-desktop: 112.5 !default; // In %. Used to calculate the desktop font size. Number only, no units.
+$base-font-size-desktop: 100 !default; // In %. Used to calculate the desktop font size. Number only, no units.
 $line-height: 1.625;
 $line-height-desktop: 1.7;
 $max-width: 60; // Number only, no units. Gets converted to REMs and pixels.
@@ -46,12 +46,12 @@ $headings: (
 // Colors
 $color-font-body: #222;
 $color-font-headings: $color-font-body;
-$color-font-light: #888;
+$color-font-light: #666;
 $color-font-figcaption: $color-font-body;
 
 $color-link-normal: $color-font-body;
 $color-link-hover: $color-font-body;
-$color-link-active: #f00;
+$color-link-active: #888;
 $color-link-visited: $color-font-light;
 
 // Horizontal rule
