ADD: interface with header

--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -29,7 +29,7 @@ nav {
 main {
   h1 {
     &:before {
-      content: 'You are now reading:';
+      content: 'You are reading:';
       display: block;
       color: gray;
       font-weight: 200;
