ADD: interface with header

--- a/content/style/_gutenberg-config.scss
+++ b/content/style/_gutenberg-config.scss
@@ -49,10 +49,10 @@ $color-font-headings: $color-font-body;
 $color-font-light: #666;
 $color-font-figcaption: $color-font-body;
 
-$color-link-normal: $color-font-body;
-$color-link-hover: $color-font-body;
-$color-link-active: #888;
-$color-link-visited: $color-font-light;
+$color-link-normal: #265C83;
+$color-link-hover: #7FDBFF;
+$color-link-active: #5007BE;
+$color-link-visited: #265C83;
 
 // Horizontal rule
 $hr-style: line; // [ line / type ]
