--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -19,34 +19,6 @@ p, h1, h2, h3, h4, h5 {
   }
 }
 
-nav {
-  a {
-    display: inline-block;
-    margin-right: 1.5rem;
-  }
-}
-
-main {
-  h1 {
-    &:before {
-      content: 'You are reading:';
-      display: block;
-      color: gray;
-      font-weight: 200;
-      font-size: 0.5em;
-    }
-    margin-top: 2.75rem;
-  }
-}
-
-pre {
-  font-size: 0.85rem;
-  code {
-    padding: 1rem;
-    display: block;
-  }
-}
-
 // Grid button
 .toggleWrapper {
   @if $edit-mode == true {
@@ -115,3 +87,38 @@ pre {
 
 /* Put your styles below this line
    ========================================================================== */
+
+nav {
+  a {
+    display: inline-block;
+    margin-right: 1.5rem;
+  }
+}
+
+main {
+  h1 {
+    &:before {
+      content: 'You are reading:';
+      display: block;
+      color: gray;
+      font-weight: 200;
+      font-size: 0.5em;
+    }
+    margin-top: 2.75rem;
+  }
+}
+
+pre {
+  font-size: 0.85rem;
+  code {
+    padding: 1rem;
+    display: block;
+  }
+}
+
+#article-list {
+  li.header {
+    list-style: none;
+    margin-left: -40px;
+  }
+}
