--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -2,6 +2,6 @@ header
   h2 Tommy Ku's Method Stub
 nav
   == link_to 'Index', '/'
-  == link_to 'About Me', 'https://tommyku.com'
+  == link_to 'About Me', 'https://gh.tommyku.com'
   == link_to 'AngelList', 'https://angel.co/tommyku'
   == link_to 'LinkedIn', 'https://hk.linkedin.com/in/tommy-ku-65aba999'
