--- a/layouts/blog.slim
+++ b/layouts/blog.slim
@@ -26,3 +26,5 @@ html lang='en'
     script type='text/javascript' src='/js/highlight.pack.js'
     coffee:
       hljs.initHighlightingOnLoad()
+
+    == render '/disqus.slim'
