--- a/layouts/disqus.slim
+++ b/layouts/disqus.slim
@@ -1,8 +1,8 @@
 #disqus_thread
 javascript:
   var disqus_config = function () {
-    this.page.url = "";
-    this.page.identifier = "";
+    this.page.url = "#{url_for(@item)}";
+    this.page.identifier = "#{@item[:slug]}";
   };
   (function() {  // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
