ALT: awesome titles

--- a/layouts/default.slim
+++ b/layouts/default.slim
@@ -6,6 +6,7 @@ html lang='en'
     meta charset="utf-8"
     meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"
     meta name="author" content="Tommy Ku"
+    meta name="title" content="#{@item[:title]} - Tommy Ku's Method Stub - Random thoughts, stories and tutorials of a web dev"
     title
       = @item[:title]
     link rel="stylesheet" href="/style/gutenberg.css"
