--- a/layouts/blog.slim
+++ b/layouts/blog.slim
@@ -6,8 +6,9 @@ html lang='en'
     meta charset="utf-8"
     meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"
     meta name="author" content="Tommy Ku"
+    meta name="title" content="#{@item[:title]} - Tommy Ku's Method Stub - Random thoughts, stories and tutorials of a web dev"
     title
-      = @item[:title]
+      = "#{@item[:title]} - Tommy Ku's Method Stub"
     link rel="stylesheet" href="/style/gutenberg.css"
     link rel='stylesheet' href='/style/tomorrow-night-eighties.css'
     meta name="generator" content="Nanoc #{Nanoc::VERSION}"
