ADD: header subtitle

--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -1,5 +1,7 @@
 header
   h2 Tommy Ku's Method Stub
+  p
+    i Reading and thinking
 nav
   == link_to 'Index', '/'
   == link_to 'About Me', 'https://gh.tommyku.com'
