--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -1,5 +1,7 @@
 header
-  h2 Tommy Ku's Method Stub
+  h2
+    img.author src='/assets/images/author.jpg'
+    | Tommy Ku's Method Stub
   p
     i Reading and thinking
 nav
