ADD: ported more posts from the last version

--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -154,3 +154,12 @@ table td {
   margin-bottom: 0;
   margin-right: 0.5rem;
 }
+
+p code {
+  color: #2d2d2d;
+  background: #cccccc;
+  padding: 0.1rem 0.25rem;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  vertical-align: bottom;
+}
