--- a/content/index.slim
+++ b/content/index.slim
@@ -12,4 +12,6 @@ ul#article-list
           time
             = current_date = attribute_to_time(article[:created_at]).strftime('%Y.%m')
     li
-      == link_to article[:title], url_for(article)
+      p == link_to article[:title], url_for(article)
+      - if abstract?(article)
+        == abstract(article)
