ALT: About me page location

--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -6,6 +6,6 @@ header
     i Reading and thinking
 nav
   == link_to 'Index', '/'
-  == link_to 'About Me', 'https://gh.tommyku.com'
+  == link_to 'About Me', 'https://hp.tommyku.com'
   == link_to 'AngelList', 'https://angel.co/tommyku'
   == link_to 'LinkedIn', 'https://hk.linkedin.com/in/tommy-ku-65aba999'
