--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -196,6 +196,8 @@ img {
 @media screen and (max-width: #{$max-width / 1.5 + 'em'}) {
   .special {
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
