--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -9,3 +9,4 @@ nav
   == link_to 'About Me', 'https://hp.tommyku.com'
   == link_to 'AngelList', 'https://angel.co/tommyku'
   == link_to 'LinkedIn', 'https://hk.linkedin.com/in/tommy-ku-65aba999'
+  == link_to 'GitHub', 'https://github.com/tommyku'
