--- a/content/atom.erb
+++ b/content/atom.erb
@@ -1,1 +1,3 @@
-<%= atom_feed title: 'Tommy Ku\'s Method Stub', author_name: 'Tommy Ku', author_uri: @config[:base_url], limit: 10, articles: sorted_published_articles %>
+<% if @config[:base_url] != '.' %>
+  <%= atom_feed title: 'Tommy Ku\'s Method Stub', author_name: 'Tommy Ku', author_uri: @config[:base_url], limit: 10, articles: sorted_published_articles %>
+<% end %>
