--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -10,3 +10,4 @@ nav
   == link_to 'AngelList', 'https://angel.co/tommyku'
   == link_to 'LinkedIn', 'https://hk.linkedin.com/in/tommy-ku-65aba999'
   == link_to 'GitHub', 'https://github.com/tommyku'
+  == link_to 'Atom Feed', '/atom.xml'
