--- a/layouts/meta.slim
+++ b/layouts/meta.slim
@@ -9,3 +9,4 @@ meta name="description" content=description
 meta name="author" content="Tommy Ku"
 meta property="og:title" content=title
 meta property="og:type" content="article"
+link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Tommy Ku's Method Stub"
