FIX: error bonus in 404 page

--- a/content/404.slim
+++ b/content/404.slim
@@ -24,7 +24,7 @@ section#bonus style="text-align: center;"
       == link_to 'yeap sure...', 'https://hp.tommyku.com/'
   section#curse.hidden
     p Yeah sure
-  section#error
+  section#error.hidden
     p I mean you are staring at an error you know
 
 script type="text/javascript" src="/js/404.js"
