--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -6,8 +6,8 @@ header
     i Reading and thinking
 nav
   == link_to 'Index', '/'
-  == link_to 'About Me', 'https://hp.tommyku.com'
+  == link_to 'About Me', 'https://tommyku.com'
   == link_to 'AngelList', 'https://angel.co/tommyku'
-  == link_to 'LinkedIn', 'https://hk.linkedin.com/in/tommy-ku-65aba999'
+  == link_to 'LinkedIn', 'https://www.linkedin.com/in/tommy-chun-kit-ku-65aba999'
   == link_to 'GitHub', 'https://github.com/tommyku'
   == link_to 'Atom Feed', '/atom.xml'
