--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -1,6 +1,6 @@
 header
   h2
-    img.author src='/assets/images/author.jpg'
+    img.author src='/assets/images/author.jpg' alt='Profile pic of Tommy Ku'
     | Tommy Ku's Method Stub
   p
     i Reading and thinking
