ADD: minor style tweaks

--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -146,6 +146,11 @@ pre {
     list-style: none;
     margin-left: -40px;
   }
+
+  li {
+    list-style: square;
+    margin-top: 0.75rem;
+  }
 }
 
 table th,
