--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -196,6 +196,7 @@ img {
   margin-left: 2.5%;
   text-decoration: none;
   padding-bottom: 1.6875rem;
+  vertical-align: top;
 
   h4 {
     margin: 0;
