--- a/layouts/default.slim
+++ b/layouts/default.slim
@@ -11,4 +11,6 @@ html lang='en'
     main#main
       section#content
         == yield
+    hr
+    == render '/footer.slim'
     == render '/analytics.slim'
