ALT: remove Method Stub naming for my blog

--- a/layouts/blog.slim
+++ b/layouts/blog.slim
@@ -3,7 +3,7 @@ html lang='en'
   head
     == render '/meta.slim'
     title
-      = "#{@item[:title]} - Tommy Ku's Method Stub"
+      = "#{@item[:title]} - Tommy Ku's Blog"
     link rel="stylesheet" href="/style/gutenberg.css"
     link rel='stylesheet' href='/style/tomorrow-night-eighties.css'
     meta name="generator" content="Nanoc #{Nanoc::VERSION}"
