--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -1,7 +1,7 @@
 header
   h2
     img.author src='/assets/images/author.jpg' alt='Profile pic of Tommy Ku'
-    | Tommy Ku's Method Stub
+    | Tommy Ku's Blog
   p
     i Reading and thinking
 nav
