--- a/layouts/meta.slim
+++ b/layouts/meta.slim
@@ -1,6 +1,6 @@
 meta charset="utf-8"
 meta name="viewport" content="width=device-width,initial-scale=1.0"
-- title = "#{@item[:title]} - Tommy Ku's Method Stub - Random thoughts, stories and tutorials of a web dev"
+- title = "#{@item[:title]} - Tommy Ku's Blog - Random thoughts, stories and tutorials of a web dev"
 - description = "#{@item[:description].nil? ? 'Web developer Tommy Ku talks about his experience in work, learning and life.' : @item[:description]}"
 meta name="title" content=title
 meta name="description" content=description
