ADD: copyright message to blog posts

--- a/layouts/blog.slim
+++ b/layouts/blog.slim
@@ -27,4 +27,6 @@ html lang='en'
       hljs.initHighlightingOnLoad()
 
     == render '/disqus.slim'
+    hr
+    == render '/footer.slim'
     == render '/analytics.slim'
