ADD: migrated from highlightjs to prismjs

--- a/content/style/_gutenberg-responsive.scss
+++ b/content/style/_gutenberg-responsive.scss
@@ -175,9 +175,9 @@
     }
   }
 
-  code {
-    @include padding-equal(1);
-  }
+  //code {
+    //@include padding-equal(1);
+  //}
 
   // Attention grabber
   .attention-grabber {
