--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -133,11 +133,9 @@ blockquote {
 }
 
 pre {
-  font-size: 0.85rem;
   code {
-    padding: 1rem;
-    display: block;
-    border: 1px solid #2d2d2d;
+    margin-bottom: 0 !important;
+    padding: 0 !important;
   }
 }
 
@@ -172,14 +170,14 @@ table td {
   margin-right: 0.5rem;
 }
 
-p code {
-  color: #2d2d2d;
-  background: #cccccc;
-  padding: 0.1rem 0.25rem;
-  border-radius: 4px;
-  font-size: 0.8rem;
-  vertical-align: bottom;
-}
+//p code {
+  //color: #2d2d2d;
+  //background: #cccccc;
+  //padding: 0.1rem 0.25rem;
+  //border-radius: 4px;
+  //font-size: 0.8rem;
+  //vertical-align: bottom;
+//}
 
 .hljs {
   line-height: 1.5em !important;
