ALT: use Feed instead of Atom Feed

--- a/layouts/header.slim
+++ b/layouts/header.slim
@@ -11,4 +11,4 @@ nav
   == link_to 'AngelList', 'https://angel.co/tommyku'
   == link_to 'LinkedIn', 'https://www.linkedin.com/in/tommy-chun-kit-ku-65aba999'
   == link_to 'GitHub', 'https://github.com/tommyku', rel: 'me'
-  == link_to 'Atom Feed', '/atom.xml'
+  == link_to 'Feed', '/atom.xml'
