--- a/layouts/analytics.slim
+++ b/layouts/analytics.slim
@@ -1,8 +1,10 @@
 - if @config[:enable_analytics]
-  javascript:
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-47055557-3', 'auto');
-    ga('send', 'pageview');
+  a href="https://blog.tommyku.com/blog/website-analytics-for-lazy-people" id="tracking-status" class="unloaded" title="Tracking Indicator"
+  img src="https://bit.ly/3o45bPa" style="width: 0px; height: 0px; margin: 0; padding: 0; visibility: hidden;" onload="javascript: document.querySelector('#tracking-status').classList.replace('unloaded', 'loaded')"
+  / javascript:
+    / (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    / (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    / m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    / })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    / ga('create', 'UA-47055557-3', 'auto');
+    / ga('send', 'pageview');
