--- a/layouts/meta.slim
+++ b/layouts/meta.slim
@@ -13,3 +13,4 @@ meta property="og:type" content="article"
   meta property="og:image" content="#{url_for(@item)}#{@item[:banner]}"
 link rel="icon" type="image/png" href="/assets/images/author.jpg"
 link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Tommy Ku's Method Stub"
+link rel="webmention" href="https://webmention.tkcom.workers.dev/"
