ALT: permalink text

--- a/layouts/permalink.slim
+++ b/layouts/permalink.slim
@@ -1,3 +1,5 @@
-h2 Permalink to this page
 p
+  | This post first appeared on&nbsp;
+  a#permalink class="u-url" href="#{url_for(@item)}" = "Tommy Ku's blog"
+  | . Permalink: 
   a#permalink class="u-url" href="#{url_for(@item)}" = "#{url_for(@item)}"
