--- a/content/copyright-exceptions.slim
+++ b/content/copyright-exceptions.slim
@@ -1,9 +1,3 @@
 ---
-title: Tommy Ku's Blog CC Exceptions
+title: Tommy Ku's Blog
 ---
-
-h2 CC BY copyright exceptions
-
-| The works in this blog is licensed under a&nbsp;
-a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" Creative Commons Attribution-ShareAlike 4.0 International License
-| &nbsp;with the exception of all images and videos attributed to external parties separately in their respective captions.
