FIX: tracking status emoji centering position

--- a/content/style/_gutenberg-style.scss
+++ b/content/style/_gutenberg-style.scss
@@ -324,6 +324,7 @@ a#tracking-status {
   line-height: 0;
   margin: 0 auto;
   padding: 0;
+  padding-right: 1em;
   text-decoration: none;
 
   &.unloaded::before {
