ADD: visited links should show different color

--- a/content/style/_gutenberg-config.scss
+++ b/content/style/_gutenberg-config.scss
@@ -52,7 +52,7 @@ $color-font-figcaption: $color-font-body;
 $color-link-normal: #265C83;
 $color-link-hover: #7FDBFF;
 $color-link-active: #5007BE;
-$color-link-visited: #265C83;
+$color-link-visited: #5007BE;
 
 // Horizontal rule
 $hr-style: line; // [ line / type ]
